--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,11 @@
 micronaut:
     application:
         name: jlogfmt
+
+colors:
+  info: 32   # зелёный
+  warn: 33   # жёлтый
+  error: 31  # красный
+  debug: 36  # циан
+  trace: 35  # пурпурный
+  reset: 0   # сброс
